--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,2 +1,18 @@
 logging.level:
   root: WARN
+
+spring:
+  data.rest.base-path: /api
+  test.database.replace: NONE
+  datasource:
+    url: jdbc:postgresql://${DB_HOST}/${DB_NAME}
+    username: ${DB_USER:}
+    password: ${DB_PASS:}
+#    driverClassName: org.postgresql.Driver
+    tomcat.max-active: ${DB_MAX_ACTIVE:100}
+  jpa:
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
+#    hibernate.ddl-auto: validate
+    properties.hibernate:
+#      jdbc.time_zone: UTC
+      show_sql: false
