Improves live reload development of react
- Makes frontend a complie dependency of server so that Intellij will
build frontend when compiling server.

- Adds a `-Pwatch` flag to the gradle `webpack` task to keep the process
running and rebuild when it detects changes

Tested runnign the DempApplication.main through the IDE, with `>gw
webpack -Pwatch` running and was able to make a change to app.js and
refresh localhost:8080 and see the changes ...eventually (few seconds)

--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -40,9 +40,14 @@ task webpack(type: NpmTask) {
         'webpack',
         '--mode=development',
         "--output-path=$buildDir/static/js",
-        '--output-filename=bundle.js',
-        "$srcDir/app.js"
+        '--output-filename=bundle.js'
     ]
+
+    if (project.hasProperty("watch")) {
+        args << "--watch"
+    }
+
+    args << "$srcDir/app.js"
 
 }
 assemble.dependsOn(webpack)
